--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <ul class="header-nav_items">
                 <li class="list-item"><a href="#">Gmail</a></li>
                 <li class="list-item"><a href="#">Imágenes</a></li>
-                <li class="list-item"><button>Iniciar sesión</button></li>
+                <button class="login">Iniciar sesión</button>
             </ul>
         </nav>
     </header>
@@ -26,9 +26,9 @@
             <div class="search-bar">
                 <input type="text" class="search-input">
             </div>
-            <div class="search-buttons">
-                <input class="search-button-a" type="submit" value="Buscar con Google">
-                <input class="search-button-b" type="submit" value="Me siento con suerte">
+            <div class="search-options">
+                <input class="search-button" type="submit" value="Buscar con Google">
+                <input class="search-button" type="submit" value="Me siento con suerte">
             </div>
         </form>
     </main>
